--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="video">
-        <video class="videito" src="../Videos/video-wai.mp4" autoplay mute loop></video>
+        <video class="videito" src="video-wai.mp4" autoplay mute loop></video>
     </div>
     <form class="formulario" >
         <!--INPUTS SIMPLES -->
